added images in index.html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 
 <body>
+  <img src="images/logo.png" alt="logo of my work" >
     <h1 class="title" style="font-size:5vw">My Biography</h1>
       <h2 style="font-size: 4vw;">About Me</h2>
+    
       
     <p style="font-size: 2vw;">Hi, welcome to my page. My name is Sandhya Shrestha. Premanantly I am from Nepal and current student of Bachelor of Interactive Media (BIM) in sydney, Australia. I came to Australia on march 2017. Australia is a unique and diverse country in every way - in culture, population, climate, geography, and history.
         Australian culture is as broad and varied as the country's landscape. Australia is multicultural and multiracial and this is reflected in the country's food, lifestyle and cultural practices and experience.
