--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 
 <body>
+  <ul>
+    <li><a href="index.html">HOME</a></li>
+    <li><a href="about.html">About ME</a></li>
+    <li><a href="photo.html">MY WORK</a></li>
+  </ul>
   <img src="images/logo.png" alt="logo of my work" >
     <h1 class="title" style="font-size:5vw">My Biography</h1>
       <h2 style="font-size: 4vw;">About Me</h2>
@@ -19,7 +24,8 @@
       
         <p style="font-size: 3vw;">Its me Sandhya Shrestha:-)</p>
       
-<a href="about.html">ABOUT ME</a>   
+<a href="about.html">ABOUT ME</a> 
+<a href="photo.html">MY WORK</a>  
 
 </body>
 </html>
