added images in photo.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <ul>
     <li><a href="index.html">HOME</a></li>
     <li><a href="about.html">About ME</a></li>
-    <li><a href="photo.html">MY WORK</a></li>
+    <li><a href="photo.html">PHOTOS</a></li>
   </ul>
   <img src="images/logo.png" alt="logo of my work" >
     <h1 class="title" style="font-size:5vw">My Biography</h1>
