--- a/photo.html
+++ b/photo.html
@@ -15,6 +15,124 @@
  </head>
 
  <body>
+    <div class="topnav">
 
+        <nav><ul>
+
+                <li><a href="index.html">HOME</a></li>
+
+                <li><a href="about.html">ABOUT ME</a> </li>
+
+                <li><a href="photo.html">PHOTOS</a></li>
+
+                <li><a href="contact.html">CONTACT</a></li>
+
+              </ul></nav>
+
+       </div>
+
+     <h1 class="title" style="font-size: 4vw;">Welcome to my page</h1>
+
+     <h2 style="font-size: 4vw;">My photography</h2>
+
+     <p style="font-size: 2vw;">Some of my photos from my gallery are:</p>
+
+     <br> 
+     <figure>
+
+     <img src="images/sami (1).jpg" width="860" alt="image of a beautiful girl" style="width:100%;">
+
+    <figcaption>My frieend's sister</figcaption>
+
+    </figure>
+
+    <figure>
+
+     <img src="images/sami (2).jpg" width="860" alt="image of a beautiful girl" style="width:100%;">
+
+     <figcaption>Samriddhi Aryal</figcaption>
+    </figure>
+
+    <figure>
+
+     <img src="images/sami (3).jpg" width="860" alt="image of a beautiful girl" style="width:100%;">
+
+     <figcaption>Cute girl</figcaption>
+
+    </figure>wq
+
+    <figure>
+
+     <img src="images/cyrus (2).jpg" width="860" alt="image of a cute boy" style="width:100%;">
+
+     <figcaption>My Sister's son</figcaption>
+
+    </figure>
+
+    <figure>
+
+     <img src="images/cyrus.jpg" width="860" alt="image of a cute boy" style="width:100%;">
+
+     <figcaption>My sister's daugther</figcaption>
+
+    </figure>
+
+    <figure>
+
+     <img src="images/brides (1).jpg" width="860" alt="beautiful brides" style="width:100%;">
+
+     <figcaption>Nepalese Bride</figcaption>
+
+    </figure>
+
+    <figure>
+
+     <img src="images/brides (2).jpg" width="860" alt="beautiful brides" style="width:100%;">
+
+     <figcaption>Nepalese Bride</figcaption>
+
+    </figure>
+
+    <figure>
+
+     <img src="images/brides (3).jpg" width="860" alt="beautiful brides" style="width:100%;">
+
+     <figcaption>Nepalese Bride</figcaption>
+
+    </figure>
+
+    <figure>
+
+     <img src="images/brides (4).jpg" width="860" alt="images-860 of bondi-beach" style="width:100%;">
+
+     <figcaption>Nepalese Bride</figcaption>
+
+    </figure>
+
+    <figure>
+
+     <img src="images/brides (5).jpg" width="860" alt="beautiful brides" style="width:100%;">
+
+     <figcaption>Nepalese Bride</figcaption>
+
+    </figure>
+
+    <figure>
+
+     <img src="images/brides (6).jpg" width="860" alt="beautiful brides" style="width:100%;">
+
+     <figcaption>Nepalese Bride</figcaption>
+
+    </figure>
+
+    <figure>
+
+     <img src="images/brides (7).jpg" width="860" alt="beautiful brides" style="width:100%;">
+
+     <figcaption>Nepalese Bride4</figcaption>
+
+    </figure>
+
+    
  </body>
  </html>
