--- a/about.html
+++ b/about.html
@@ -1,37 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-   <meta charset="utf-8">
-   <link rel="stylesheet" href="style.css">
-   <title>BIM321</title>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+ 
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+ 
+    <link rel="stylesheet" href="style.css">
+    <title>About Me</title>
+ </head>
 
 <body>
-    <p>Hello Everyone,
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+   <span class="navbar-toggler-icon"></span>
+ </button>
+ <div class="collapse navbar-collapse" id="navbarNav">
+   <ul class="navbar-nav">
+     <li class="nav-item active">
+       <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+     </li>
+     <li class="nav-item">
+       <a class="nav-link" href="about.html">About Me</a>
+     </li>
+     <li class="nav-item">
+       <a class="nav-link" href="photo.html">Photos</a>
+     </li>
+        </ul>
+ </div>
+</nav>
+<div class="container-flex p-5">
+  <h2 class="text-center">About Me</h2>
+  <p>Hello Everyone,
     I introduce myself as a hard working, energetic and an interesting personality. And I am those things, I’m also much more. I’m more than a limited character count and a filtered photo to be found in the void of social media. 
 I love to travel, read books, despite of that, i love to do the animation stuff and playing with the materials in the adobe photoshop and illustrator. Back in my hometown i learned little bit idea on this sector which make my interest in it. Here i got much more knowledge on this. some of the software that i have knowledge of are:
-<ul style="list-style-type:none;">
+</p> 
+</div>
 
-    <li> Adobe photoshop</li>
+<div class="container-flex p-5">
+  <h2 class="text-center">My Interest</h2>
+  <ul class="list-group">
+    <li class="list-group-item">Adobe photoshop</li>
+    <li class="list-group-item">Adobe illustrator</li>
+    <li class="list-group-item">Adobe After effects</li>
+    <li class="list-group-item">Visual studio code</li>
+    <li class="list-group-item">Github</li>
+    <li class="list-group-item">Html and Css</li>
 
-    <li>Adobe illustrator</li>
+  </ul>
+  </div>
+    
 
-     <li>Adobe After effects</li>
-
-    <li>Visual studio code</li>
-
-    <li>Github</li>
-
-    <li> html and css </li>
-
-    <li> stop motion animation</li>
-
-  </p>  
-I’m a feminist. I’m an environmentalist. I’m from Nepal with a passion for seeing all parts of the world. You can find me listening music, try to dance in different forms and play games. If I had to choose a different lifetime I’d pick the 90s. 
+<div class="container-fluid p-5">
+  I’m a feminist. I’m an environmentalist. I’m from Nepal with a passion for seeing all parts of the world. You can find me listening music, try to dance in different forms and play games. If I had to choose a different lifetime I’d pick the 90s. 
 I dream that the stories I get the privilege to bring to life never burn out. And, I’m still more than these things. I’m years of experiences. And I will be more things yet to come. 
 
 Sandhya Stha
+</div>
+   
+
   
 </body>
 </html>
