--- a/photo.html
+++ b/photo.html
@@ -15,21 +15,24 @@
  </head>
 
  <body>
-    <div class="topnav">
-
-        <nav><ul>
-
-                <li><a href="index.html">HOME</a></li>
-
-                <li><a href="about.html">ABOUT ME</a> </li>
-
-                <li><a href="photo.html">PHOTOS</a></li>
-
-                <li><a href="contact.html">CONTACT</a></li>
-
-              </ul></nav>
-
-       </div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+   <span class="navbar-toggler-icon"></span>
+ </button>
+ <div class="collapse navbar-collapse" id="navbarNav">
+   <ul class="navbar-nav">
+     <li class="nav-item active">
+       <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+     </li>
+     <li class="nav-item">
+       <a class="nav-link" href="about.html">About Me</a>
+     </li>
+     <li class="nav-item">
+       <a class="nav-link" href="photo.html">Photos</a>
+     </li>
+        </ul>
+ </div>
+</nav>
 
      <h1 class="title" style="font-size: 4vw;">Welcome to my page</h1>
 
