--- a/photo.html
+++ b/photo.html
@@ -2,17 +2,19 @@
 
 <html lang="en">
 
- <head>
-
-  <meta charset="utf-8">
-
-  <link rel="stylesheet" href="style.css">
-
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-
-  <title>My photography</title>
-
+  <head>
+    <meta charset="utf-8">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+ 
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+ 
+    <link rel="stylesheet" href="style.css">
+    <title>My Photos</title>
  </head>
+
 
  <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -34,107 +36,48 @@
  </div>
 </nav>
 
-     <h1 class="title" style="font-size: 4vw;">Welcome to my page</h1>
+     <div class="container-fluid p-5 text-center">
+      <h1 class="title" style="font-size: 4vw;">Welcome to my page</h1>
 
-     <h2 style="font-size: 4vw;">My photography</h2>
+      <h2 style="font-size: 4vw;">My photography</h2>
+ 
+      <p style="font-size: 2vw;">Some of my photos from my gallery are:</p>
+     </div>
 
-     <p style="font-size: 2vw;">Some of my photos from my gallery are:</p>
+     <div class="container-fluid">
+       <div class="row">
+         <div class="col-lg-4">
+          <img src="images/sami (1).jpg" class="img-fluid" alt="Responsive image">
 
-     <br> 
-     <figure>
+         </div>
+         <div class="col-lg-4">
+          <img src="images/sami (2).jpg" class="img-fluid" alt="Responsive image">
 
-     <img src="images/sami (1).jpg" width="860" alt="image of a beautiful girl" style="width:100%;">
+         </div>
+         <div class="col-lg-4">
+          <img src="images/sami (3).jpg" class="img-fluid" alt="Responsive image">
 
-    <figcaption>My frieend's sister</figcaption>
+         </div>
+       </div>
 
-    </figure>
+       <div class="row p-5">
+        <div class="col-lg-4">
+         <img src="images/brides (1).jpg" class="img-fluid" alt="Responsive image">
 
-    <figure>
+        </div>
+        <div class="col-lg-4">
+         <img src="images/brides (2).jpg" class="img-fluid" alt="Responsive image">
 
-     <img src="images/sami (2).jpg" width="860" alt="image of a beautiful girl" style="width:100%;">
+        </div>
+        <div class="col-lg-4">
+         <img src="images/brides (3).jpg" class="img-fluid" alt="Responsive image">
 
-     <figcaption>Samriddhi Aryal</figcaption>
-    </figure>
+        </div>
+      </div>
 
-    <figure>
+     </div>
 
-     <img src="images/sami (3).jpg" width="860" alt="image of a beautiful girl" style="width:100%;">
-
-     <figcaption>Cute girl</figcaption>
-
-    </figure>wq
-
-    <figure>
-
-     <img src="images/cyrus (2).jpg" width="860" alt="image of a cute boy" style="width:100%;">
-
-     <figcaption>My Sister's son</figcaption>
-
-    </figure>
-
-    <figure>
-
-     <img src="images/cyrus.jpg" width="860" alt="image of a cute boy" style="width:100%;">
-
-     <figcaption>My sister's daugther</figcaption>
-
-    </figure>
-
-    <figure>
-
-     <img src="images/brides (1).jpg" width="860" alt="beautiful brides" style="width:100%;">
-
-     <figcaption>Nepalese Bride</figcaption>
-
-    </figure>
-
-    <figure>
-
-     <img src="images/brides (2).jpg" width="860" alt="beautiful brides" style="width:100%;">
-
-     <figcaption>Nepalese Bride</figcaption>
-
-    </figure>
-
-    <figure>
-
-     <img src="images/brides (3).jpg" width="860" alt="beautiful brides" style="width:100%;">
-
-     <figcaption>Nepalese Bride</figcaption>
-
-    </figure>
-
-    <figure>
-
-     <img src="images/brides (4).jpg" width="860" alt="images-860 of bondi-beach" style="width:100%;">
-
-     <figcaption>Nepalese Bride</figcaption>
-
-    </figure>
-
-    <figure>
-
-     <img src="images/brides (5).jpg" width="860" alt="beautiful brides" style="width:100%;">
-
-     <figcaption>Nepalese Bride</figcaption>
-
-    </figure>
-
-    <figure>
-
-     <img src="images/brides (6).jpg" width="860" alt="beautiful brides" style="width:100%;">
-
-     <figcaption>Nepalese Bride</figcaption>
-
-    </figure>
-
-    <figure>
-
-     <img src="images/brides (7).jpg" width="860" alt="beautiful brides" style="width:100%;">
-
-     <figcaption>Nepalese Bride4</figcaption>
-
-    </figure>
+     
 
     
  </body>
