--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
  <div class="collapse navbar-collapse" id="navbarNav">
    <ul class="navbar-nav">
      <li class="nav-item active">
-       <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+       <a class="nav-link" href="index.html">Home </a>
      </li>
      <li class="nav-item">
        <a class="nav-link" href="about.html">About Me</a>
@@ -30,6 +30,9 @@
      <li class="nav-item">
        <a class="nav-link" href="photo.html">Photos</a>
      </li>
+     <li class="nav-item">
+      <a class="nav-link" href="contact.html">Contact Me</a>
+    </li>
         </ul>
  </div>
 </nav>
