--- a/contact.html
+++ b/contact.html
@@ -2,167 +2,123 @@
 
 <html lang="en">
 
- <head>
-
-  <meta charset="utf-8">
-
-  <link rel="stylesheet" href="style.css">
-
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-
-  <title>CONTACT ME</title>
-  <style>
-
-    @media screen and (max-width: 600px) {
-
-       .col-25, .col-75, input[type=submit] {
-
-         width: 100%;
-
-         margin-top: 0;
-
-       }
-
-    }
-
-</style>
-
+  <head>
+    <meta charset="utf-8">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+ 
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+ 
+    <link rel="stylesheet" href="style.css">
+    <title>Contact Me</title>
  </head>
 
  <body>
-    <div class="topnav" id>
 
-        <nav><ul>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+   <span class="navbar-toggler-icon"></span>
+ </button>
+ <div class="collapse navbar-collapse" id="navbarNav">
+   <ul class="navbar-nav">
+     <li class="nav-item active">
+       <a class="nav-link" href="index.html">Home </a>
+     </li>
+     <li class="nav-item">
+       <a class="nav-link" href="about.html">About Me</a>
+     </li>
+     <li class="nav-item">
+       <a class="nav-link" href="photo.html">Photos</a>
+     </li>
+     <li class="nav-item">
+      <a class="nav-link" href="contact.html">Contact Me</a>
+    </li>
 
-                <li><a href="index.html">HOME</a></li>
+        </ul>
+ </div>
+</nav>
 
-                <li><a href="about.html">ABOUT ME</a> </li>
+          
 
-                <li><a href="photo.html">PHOTOS</a></li>
+<div class="container-fluid p-5 text-center">
+  <h2 >Contact details</h2>
 
-                <li><a href="contact.html">CONTACT ME</a></li>
-
-            </ul></nav>
-
-        </div>
-
-        
-
-     <h1 class="title" style="font-size: 4vw;">Welcome to my page</h1>
-
-<h2 style="font-size: 4vw;">Contact details</h2>
-
-<p style="font-size: 2vw;">If you want to provide any suggestion for my improvement you are welcome for it.</p>
+<p >If you want to provide any suggestion for my improvement you are welcome for it.</p>
+</div>
 
 
 
 <div class="container">
-
-  <form action="/action_page.php">
-
-  <div class="row">
-
-    <div class="col-25">
-
-      <label for="fname">First Name</label>
-
+  <form>
+    <div class="form-group">
+      <label for="firstName">First Name</label>
+      <input type="text" class="form-control" placeholder="First Name">
+    </div>
+    <div class="form-group">
+      <label for="lastName">Last Name</label>
+      <input type="text" class="form-control" placeholder="Last Name">
     </div>
 
-    <div class="col-75">
-
-      <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
+    <div class="form-group">
+      <label for="exampleInputPassword1">Password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
-
-  </div>
-
-  <div class="row">
-
-    <div class="col-25">
-
-      <label for="lname">Last Name</label>
-
-    </div>
-
-    <div class="col-75">
-
-      <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-    </div>
-
-  </div>
-
-  <div class="row">
-
-    <div class="col-25">
-
+    <div class="form-group">
       <label for="country">Country</label>
-
-    </div>
-
-    <div class="col-75">
-
-      <select id="country" name="country">
-
-        <option value="australia">Australia</option>
-
-        <option value="canada">Canada</option>
-
-        <option value="usa">USA</option>
-
+      <select class="custom-select mr-sm-2" id="country">
+        <option selected>Choose...</option>
+        <option value="1">Australia</option>
+        <option value="2">Canada</option>
+        <option value="3">USA</option>
       </select>
-
     </div>
 
-  </div>
-
-  <div class="row">
-
-    <div class="col-25">
-
-      <label for="subject">Subject</label>
+    <div class="form-group">
+      <label for="text-field">Message</label>
+      <textarea class="form-control"  rows="3"></textarea>
 
     </div>
-
-    <div class="col-75">
-
-      <textarea id="subject" name="subject" placeholder="Write something.." 
-
-      style="height:200px">
-
-        </textarea>
-
-    </div>
-
-  </div>
-
-  <div class="row">
-
-    <input type="submit" value="Submit">
-
-  </div>
-
+    <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 
-</div>
 
-<div class="row">
 
-    <h3 style="font-size: 4vw;">Wanna contact me</h3>
 
-    <p style="font-size: 2vw;">Not an actual address,sydney<br> Email: myname@example.com<br>Phone: 0420xxxxx8<br> and</p>
+
 
 </div>
 
+<div class="container-fluid p-5">
+  <div class="row">
+
+    <div class="col-md-6"><h3>Wanna contact me</h3></div>
+
+   <div class="col-md-6"> <p >Not an actual address,sydney<br> Email: myname@example.com<br>Phone: 0420xxxxx8<br> and</p>
+</div>
+</div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col"><a href="#" class="fa fa-facebook"></a>
+    </div>
+    <div class="col"><a href="#" class="fa fa-youtube"></a>
+    </div>
+    <div class="col"><a href="#" class="fa fa-instagram"></a>
+    </div>
+    <div class="col"><a href="#" class="fa fa-snapchat-ghost"></a>
+    </div>
+
+  </div>
+</div>
 
 
-<a href="#" class="fa fa-facebook"></a>
 
-<a href="#" class="fa fa-youtube"></a>
 
-<a href="#" class="fa fa-instagram"></a>
 
-<a href="#" class="fa fa-snapchat-ghost"></a>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
