--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <li class="nav-item">
           <a class="nav-link" href="photo.html">Photos</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact Me</a>
+        </li>
            </ul>
     </div>
   </nav>
